<resources>
    <string name="app_name">Space</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="bookings">Bookings</string>
    <string name="home">Home</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="working_hours">Working hours</string>
    <string name="welcome_to">Welcome to</string>
    <string name="Space">Space</string>
    <string name="welcome_caption1">Work and organize events with\
 friends outside the office to get rid \
 of boredom</string>
    <string name="find_work_space">Find Working Space</string>
    <string name="near_you">Near you</string>

    <string name="welcome_caption2">Find co-working space easily and\
 quickly through this application </string>

    <string name="book_room_ws"><![CDATA[Book a Room & Workspace]]></string>
    <string name="on_demand">On-Demand</string>
    <string name="welcome_caption3">Create your event by determining \
the place that has been provided</string>
    <string name="welcome">Welcome,</string>
    <string name="please_login_first">Please Login First</string>


    <string name="enter_your_email"><font size="36">Email</font></string>
    <string name="enter_your_password">Password</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="dont_have_acc">Don\'t Have Account yet?</string>
    <string name="Register">Register</string>
    <string name="register_to_access">Register To Access</string>
    <string name="enter_your_name">Username</string>
    <string name="enter_your_password_again">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="already_have_acc">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="book_your_office_easily">Book your office easily now</string>
    <string name="submit">Submit</string>
    <string name="enter_your_registered_email">Enter your registered email</string>
    <string name="new_password">New Password</string>
    <string name="enter_different_password">Enter a different password with the previous one</string>
    <string name="verfiy_new_password">Verify New Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="success">Success</string>
    <string name="congratulations_your_pass_has_been_changed">Congratulations your pass has been changed</string>
    <string name="Booking_Successful">Booking Successful</string>
    <string name="congratulations_your_booking_has_been_confirmed">congratulations your  booking has been confirmed</string>
    <string name="go_to_bookings">Go to Bookings</string>
    <string name="cannot_book">Cannot Book</string>
    <string name="Booking_failed">Booking Failed</string>
    <string name="try_again">Try Again</string>

    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="Sorry">Sorry</string>
</resources>