<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.onboarding.welcomeScreens.WelcomeFirstFragment">


    <ImageView
        android:id="@+id/img_view_welcome1"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_img_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_welcome1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_large_24dp"
        android:text="@string/welcome_to"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/material_text_headline_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_view_welcome1" />

    <TextView
        android:id="@+id/text_view_space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Space"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/material_text_display1_34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_view_welcome1"
        app:layout_constraintTop_toBottomOf="@id/text_view_welcome1" />

    <TextView
        android:id="@+id/text_view_welcome_caption1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_tiny_4dp"
        android:text="@string/welcome_caption1"
        android:textSize="@dimen/material_text_body1_14sp"
        app:layout_constraintStart_toStartOf="@id/text_view_welcome1"
        app:layout_constraintTop_toBottomOf="@id/text_view_space" />


</androidx.constraintlayout.widget.ConstraintLayout>