<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.onboarding.welcomeScreens.WelcomeThirdFragment">

    <ImageView
        android:id="@+id/img_view_welcome2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_img_three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_book_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_large_24dp"
        android:text="@string/book_room_ws"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/material_text_headline_24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_view_welcome2" />

    <TextView
        android:id="@+id/text_view_onDemand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_demand"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/material_text_display1_34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/text_view_book_room"
        app:layout_constraintTop_toBottomOf="@id/text_view_book_room" />

    <TextView
        android:id="@+id/text_view_welcome_caption3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_tiny_4dp"
        android:text="@string/welcome_caption3"
        android:textSize="@dimen/material_text_body1_14sp"
        app:layout_constraintStart_toStartOf="@id/text_view_book_room"
        app:layout_constraintTop_toBottomOf="@+id/text_view_onDemand" />



</androidx.constraintlayout.widget.ConstraintLayout>