<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.registration.ForgetPassword.ForgetPasswordFragment">

    <TextView
        android:id="@+id/forget_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_large_24dp"
        android:text="@string/forget_password"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/material_text_headline_24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registered_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_email"
        android:textSize="@dimen/material_text_subhead_16sp"
        android:layout_marginTop="64dp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_new_password"
        app:layout_constraintStart_toStartOf="@id/forget_password_tv"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_tv" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_large_24dp"
        android:layout_marginTop="@dimen/dimens_btn_corner_radius_10dp"
        android:hint="@string/enter_your_email"
        app:boxBackgroundColor="@color/baby_blue"
        app:boxCornerRadiusBottomEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusBottomStart="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopStart="@dimen/dimens_small_8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="@dimen/dimens_tiny_4dp"
        app:layout_constraintStart_toStartOf="@id/registered_email_tv"
        app:layout_constraintTop_toBottomOf="@id/registered_email_tv">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_new_password"
        android:layout_margin="@dimen/dimens_small_8dp">

        <TextView
            android:id="@+id/remember_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Remember the password? "
            android:textSize="@dimen/material_text_body1_14sp" />

        <TextView
            android:id="@+id/sign_in_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/dark_blue"
            android:textSize="@dimen/material_text_body1_14sp" />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_huge_64dp"
        android:padding="@dimen/dimens_medium_16dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/material_text_subhead_16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimens_large_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_new_password" />




</androidx.constraintlayout.widget.ConstraintLayout>

