<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.registration.changePassword.SuccessNewPassFragment">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_office_anim"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        android:layout_marginBottom="@dimen/dimens_huge_64dp"
        app:lottie_rawRes="@raw/lottie_success" />

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/success"
        android:textStyle="bold"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/material_text_subhead_16sp"
        android:layout_margin="@dimen/dimens_btn_corner_radius_10dp"
        app:layout_constraintEnd_toEndOf="@+id/lottie_office_anim"
        app:layout_constraintStart_toStartOf="@+id/lottie_office_anim"
        app:layout_constraintTop_toBottomOf="@+id/lottie_office_anim" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congratulations_your_pass_has_been_changed"
        android:textSize="@dimen/material_text_button_14sp"
        app:layout_constraintEnd_toEndOf="@+id/lottie_office_anim"
        app:layout_constraintStart_toStartOf="@+id/lottie_office_anim"
        app:layout_constraintTop_toBottomOf="@+id/tv_success" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_huge_64dp"
        android:padding="@dimen/dimens_medium_16dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/material_text_subhead_16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimens_large_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="64dp" />




</androidx.constraintlayout.widget.ConstraintLayout>