<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.registration.register.login.LoginFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_large_24dp"
        android:layout_marginTop="@dimen/dimens_small_8dp"
        android:hint="@string/enter_your_email"
        app:boxBackgroundColor="@color/baby_blue"
        app:boxCornerRadiusBottomEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusBottomStart="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopStart="@dimen/dimens_small_8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="@dimen/dimens_tiny_4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/lato_bold"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_large_24dp"
        android:layout_marginTop="@dimen/dimens_large_24dp"
        android:hint="@string/enter_your_password"
        app:boxBackgroundColor="@color/baby_blue"
        app:boxCornerRadiusBottomEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusBottomStart="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopStart="@dimen/dimens_small_8dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="@dimen/dimens_tiny_4dp"
        app:layout_constraintStart_toStartOf="@id/edit_text_email"
        app:layout_constraintTop_toBottomOf="@id/edit_text_email"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:fontFamily="@font/lato_bold"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:fontFamily="@font/lato_bold"
        android:id="@+id/forgot_pass_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:text="@string/forget_password"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="@id/edit_text_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:fontFamily="@font/lato_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_huge_64dp"
        android:layout_marginTop="@dimen/dimens_large_32dp"
        android:padding="@dimen/dimens_medium_16dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/material_text_subhead_16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimens_large_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_pass_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>