<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.registration.changePassword.ChangePasswordFragment">


    <TextView
        android:fontFamily="@font/lato_bold"
        android:id="@+id/new_password_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimens_large_24dp"
        android:text="@string/new_password"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/material_text_headline_24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:fontFamily="@font/lato_bold"
        android:id="@+id/enter_new_pass_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_different_password"
        android:textSize="@dimen/material_text_subhead_16sp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@id/edit_text_new_password"
        app:layout_constraintStart_toStartOf="@id/new_password_tv"
        app:layout_constraintTop_toBottomOf="@+id/new_password_tv" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_new_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_large_24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/new_password"
        app:boxBackgroundColor="@color/baby_blue"
        app:boxCornerRadiusBottomEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusBottomStart="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopStart="@dimen/dimens_small_8dp"
        app:boxStrokeWidth="0dp"
         app:boxStrokeWidthFocused="@dimen/dimens_tiny_4dp"
        app:layout_constraintStart_toStartOf="@+id/enter_new_pass_tv"
        app:layout_constraintTop_toBottomOf="@id/enter_new_pass_tv"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_new_password_again"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_large_24dp"
        android:layout_marginTop="@dimen/dimens_large_24dp"
        android:hint="@string/verfiy_new_password"
        app:boxBackgroundColor="@color/baby_blue"
        app:boxCornerRadiusBottomEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusBottomStart="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopEnd="@dimen/dimens_small_8dp"
        app:boxCornerRadiusTopStart="@dimen/dimens_small_8dp"
        app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="@dimen/dimens_tiny_4dp"
        app:layout_constraintStart_toStartOf="@id/edit_text_new_password"
        app:layout_constraintTop_toBottomOf="@id/edit_text_new_password"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_bold"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimens_huge_64dp"
        android:padding="@dimen/dimens_medium_16dp"
        android:text="@string/reset_pass"
        android:fontFamily="@font/lato_bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/material_text_subhead_16sp"
        android:textStyle="bold"
        app:cornerRadius="@dimen/dimens_large_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_new_password_again"
        tools:layout_editor_absoluteX="64dp" />




</androidx.constraintlayout.widget.ConstraintLayout>